TinyWall Changelog
---------------------

2.x.x - Maintenance release (xx.xx.2015.)
- Fix: GUI crashes when process list is cancelled
- Fix: Printer sharing doesn't create rule for spoolsv.exe
- Fix: Two rules can get incorrectly merged

---------------------

2.1.5 - Maintenance release (12.10.2014.)
- Support for Window Update in Windows 8.1
- Add support for whitelisting executables on remote network shares
- Increase service robustness by dry-run testing new rules before save
- Allow selecting multiple processes when initiated over tray menu
- Add uninstallation protection
- Fix: Service crashes if backup of hosts cannot be found
- Fix: If local network traffic is allowed, local broadcasts are still blocked
- Fix: Connections window crashes if endpoint IP cannot be determined
- Fix: Under some circumstances, controller commits new settings even if rejected by service
- Fix: Wrong error message is shown if user tries to change mode while locked
- Fix: Tray shows out-of-date lock status after service locks due to timeout
- Fix: Tray GUI needs restart after service locks due to timeout
- Fix: Service crash after merging a wildcard and a non-wildcard port rule
- Fix: Hosts file not automatically updating
- Preliminary Italian translation and other localization updates
- Updated application database

---------------------

2.1.4 - Maintenance release (14.07.2013.)
- Fix: Cannot save settings after upgrade to 2.1.3

---------------------

2.1.3 - Maintenance release (12.07.2013.)
- Fix: A network zone change left outgoing connections unfiltered (2.1 regression)
- Various Hungarian, Japanese, and general localization updates

---------------------

2.1.2 - Maintenance release (06.07.2013.)
- Fix: Could not install TinyWall.XmlSerializers.dll on some systems

---------------------

2.1.1 - Maintenance release (04.07.2013.)
- Fix: When asking for permission to whitelist related files, app name is left out

---------------------

2.1.0 - Major release (04.07.2013.)