@@ -5,6 +5,7 @@ TinyWall Changelog
 - Fix: GUI crashes when process list is cancelled
 - Fix: Printer sharing doesn't create rule for spoolsv.exe
 - Fix: Two rules can get incorrectly merged
+- Fix: TinyWall loses its settings under specific circumstances
 
 ---------------------
 
